Made some cosmetic changes
Just added a horizontal rule in the footer

--- a/www/index.html
+++ b/www/index.html
@@ -30,13 +30,16 @@ $(document).ready(function() {
 <div data-role="page"  >
 	<div data-role="header">
 		<h1>All Research Computing Posts</h1>
-        <h2> Posts are dynamically pulled from a WordPress database </h2>
+        <h2> Posts are dynamically pulled from a WordPress data base </h2>
 	</div>
 	<div data-role="content" id="page">	
 		
 	</div>
 	<div data-role="footer">
-
+    <br>
+    <hr>
+End of Posts 
+<hr>
 	</div>
 </div>
 
